<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="300dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/clicksLabel"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/gitBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <Button-->
<!--        android:id="@+id/resetBtn"-->
<!--        android:layout_width="180dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="24dp"-->
<!--        android:fontFamily="@font/montserrat_black"-->
<!--        android:text="@string/resetLabel"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_black"
        android:text="@string/clicksQuantity"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <ImageButton
        android:id="@+id/btn"
        android:contentDescription="@string/buttonLabel"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="28dp"
        android:scaleType="fitXY"
        android:maxHeight="300dp"
        android:maxWidth="300dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/milly" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="150dp"
        android:layout_height="216dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/millyBtn"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/millyLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="@string/millyLabel" />

        <RadioButton
            android:id="@+id/uniBtn"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/uniLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="@string/uniLabel" />

        <RadioButton
            android:id="@+id/lunaBtn"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/lunaLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="@string/lunaLabel" />

        <RadioButton
            android:id="@+id/lunarBtn"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/montserrat_black"
            android:text="@string/lunarLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="@string/lunarLabel" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>